fixed contact navabr spacing

--- a/contact.css
+++ b/contact.css
@@ -31,14 +31,7 @@
     margin-right: 5px;
 }
 
-.navbar ul li {
-    list-style: none;
-    margin: 0 8px;
-    display: inline-block;
-    line-height: 80px;
-}
-
-.navbar ul li a {
+.navbar ul a {
     text-decoration: none;
     color: white;
     font-size: 22px;
@@ -46,10 +39,13 @@
     font-family: "Roboto", sans-serif;
     transition: 0.4s;
     margin-left: 5px;
+    list-style: none;
+    margin: 0 8px;
+    line-height: 80px;
 }
 
-.navbar ul li a.active,
-.navbar ul li a:hover {
+.navbar ul a.active,
+.navbar ul a:hover {
     background: rgba(58, 157, 231, 1);
     border-radius: 2px;
 }
@@ -189,7 +185,7 @@
     font-size: 18px;
 }
 
-@media (max-width: 991px) {
+@media (orientation: portrait) {
     .logo {
         width: auto;
         background-color: blue;
@@ -202,11 +198,11 @@
         display: flex;
         justify-content: space-around;
     }
-    .navbar ul li a {
+    .navbar ul a {
         height: 10%;
-        font-size: small;
+        font-size: medium;
         margin: 0;
-        padding: 0;
+        padding: 0 1%;
         line-height: 30px;
     }
     .contact {
